Bug 909914 - Add a missing include to avoid error: "Use of undeclared identifier 'getpid'" when building with enable-macos-target=10.9; r=smichaud