xpcom/ds/TimeStamp_darwin.cpp
@@ -20,6 +20,7 @@
 #include <sys/time.h>
 #include <sys/sysctl.h>
 #include <time.h>
+#include <unistd.h>
 
 #include "mozilla/TimeStamp.h"
 #include "nsDebug.h"
